objects/Lead/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>