objects/Lead/fields/Business_Development_Director__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Director__c</fullName>
    <formula>TEXT( Owner:User.BDD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Director</label>
    <type>Text</type>
</CustomField>