objects/Lead/fields/Disqualification_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Feedback__c</fullName>
    <label>Disqualification Feedback</label>
    <length>250</length>
    <type>Text</type>
</CustomField>