objects/Lead/fields/Form_Details__c.field-meta.xml
<CustomField>
    <fullName>Form_Details__c</fullName>
    <label>Form Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>