objects/Lead/fields/Lead_Form_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Form_Notes__c</fullName>
    <label>Lead Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>