objects/Lead/fields/Marketing_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Triggers__c</fullName>
    <label>Marketing Triggers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>