objects/Lead/fields/Notes_and_Marketing_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Marketing_Triggers__c</fullName>
    <label>Notes and Marketing Triggers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>