objects/Lead/fields/Opt_Details__c.field-meta.xml
<CustomField>
    <fullName>Opt_Details__c</fullName>
    <label>Opt Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>