objects/Lead/fields/Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Date__c</fullName>
    <label>Opt In Date</label>
    <type>Date</type>
</CustomField>