objects/Lead/fields/Primary_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Line_of_Business__c</fullName>
    <label>Primary Line of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>T&amp;D Services</fullName>
            </value>
            <value>
                <fullName>Soil Remediation</fullName>
            </value>
            <value>
                <fullName>Marine Services</fullName>
            </value>
            <value>
                <fullName>Lab Pack</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>