objects/Lead/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ConEd Lost Customers</fullName>
            </value>
            <value>
                <fullName>Lost Customer Campaign</fullName>
            </value>
            <value>
                <fullName>New Program</fullName>
            </value>
            <value>
                <fullName>New Prospect Campaign 2020</fullName>
            </value>
            <value>
                <fullName>New Prospect Campaign 2020 with Email</fullName>
            </value>
            <value>
                <fullName>New Prospect Campaign 2020 without Email</fullName>
            </value>
            <value>
                <fullName>Utility Industry</fullName>
            </value>
            <value>
                <fullName>Wednesday Leads</fullName>
            </value>
            <value>
                <fullName>Wes Mason</fullName>
            </value>
            <value>
                <fullName>Wes New Program</fullName>
            </value>
            <value>
                <fullName>new sequence</fullName>
            </value>
            <value>
                <fullName>2022 Lead without Email</fullName>
            </value>
            <value>
                <fullName>2022 Lead with Email</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>