objects/Lead/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>