objects/Lead/fields/Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show__c</fullName>
    <description>To specify the name of the trade show attended when "Trade Show" is selected as the "Lead Source", ensuring accurate lead tracking.</description>
    <label>Trade Show</label>
    <length>255</length>
    <type>Text</type>
</CustomField>