objects/Lead/fields/TransferTo__c.field-meta.xml
<CustomField>
    <fullName>TransferTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransferTo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>