objects/Lead/validationRules/Disqualification_Feedback_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Disqualification_Feedback_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 OR(
ISPICKVAL(  Status , "Disqualified - No Budget"),
ISPICKVAL(  Status , "Disqualified - Out of Service Area"),
ISPICKVAL(  Status , "Disqualified - No Contact from Lead"),
ISPICKVAL(  Status , "Disqualified - Current Customer"),
ISPICKVAL(  Status , "Disqualified - Project Cancelled"),
ISPICKVAL(  Status , "Disqualified - Awarded to Competitor")
),

  ISBLANK( Disqualification_Feedback__c ))</errorConditionFormula>
    <errorDisplayField>Disqualification_Feedback__c</errorDisplayField>
    <errorMessage>Disqualification Feedback cannot be blank for the selected  Lead Status.</errorMessage>
</ValidationRule>