objects/Lead/validationRules/Require_Trade_Show.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Trade_Show</fullName>
    <active>true</active>
    <description>Require 'Trade Show' field when Lead Source is set to 'Trade Show'</description>
    <errorConditionFormula>AND(
				ISPICKVAL(LeadSource, "Trade Show"),
				ISBLANK(Trade_Show__c)  
)</errorConditionFormula>
    <errorDisplayField>Trade_Show__c</errorDisplayField>
    <errorMessage>Enter the name of the Trade Show you attended</errorMessage>
</ValidationRule>