objects/Lead/listViews/Copy_of_All_Open_Lead.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Open_Lead</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>Sequence__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Extension__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Josh</value>
    </filters>
    <label>JJ Leads</label>
</ListView>