objects/Lead/listViews/My_Leads_2022_with_Email_Sequence.listView-meta.xml
<ListView>
    <fullName>My_Leads_2022_with_Email_Sequence</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Sequence__c</field>
        <operation>equals</operation>
        <value>2022 Lead with Email</value>
    </filters>
    <label>My Leads 2022 with Email Sequence</label>
</ListView>