objects/Lead/listViews/My_Lost_Customer_Campaign_2020.listView-meta.xml
<ListView>
    <fullName>My_Lost_Customer_Campaign_2020</fullName>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sequence__c</field>
        <operation>equals</operation>
        <value>New Prospect Campaign 2020</value>
    </filters>
    <label>My Lost Customer Campaign  2020</label>
</ListView>