objects/Lead/listViews/NY_NJ_Team.listView-meta.xml
<ListView>
    <fullName>NY_NJ_Team</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <filters>
        <field>Owner_Role__c</field>
        <operation>equals</operation>
        <value>AE_NY/NJ</value>
    </filters>
    <label>Metro Sales Team</label>
</ListView>