objects/Lead/listViews/X1_1_Sales_Meetings_Leads_Modified_Lst_Wk.listView-meta.xml
<ListView>
    <fullName>X1_1_Sales_Meetings_Leads_Modified_Lst_Wk</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Knowsy</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>greaterThan</operation>
        <value>3/13/2022</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>marrone</value>
    </filters>
    <label>1:1 Sales Meetings_Leads Modified Lst Wk</label>
</ListView>